# data-contract-registry

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: contract.yaml
src/data_contract_registry/: __init__.py  app.py  audit_stream.py  compatibility.py  from_decision_card.py  models.py  registry.py
tests/: conftest.py  test_app.py  test_audit_stream.py  test_compatibility.py  test_from_decision_card.py  test_models.py  test_registry.py
